# programacao_funcional

./: test.hs
Lista4/: CHANGELOG.md  Lista4.cabal  README.md
Lista4/.stack-work/: stack.sqlite3
Lista4/src/: Ex1.hs  Ex10.hs  Ex11.hs  Ex12.hs  Ex2.hs  Ex3.hs  Ex4.hs  Ex5.hs  Ex6.hs  Ex7.hs  Ex8.hs  Ex9.hs  Main.hs
Lista5/: CHANGELOG.md  Lista5.cabal  README.md  stack.yaml  tags
Lista5/src/: ApplicativeExamples.hs  Ex1.hs  Ex10.hs  Ex11.hs  Ex12.hs  Ex13.hs  Ex14.hs  Ex15.hs  Ex16_a_19.hs  Ex2.hs  Ex20.hs  Ex21.hs  Ex22.hs  Ex2_3.hs  Ex6_9.hs  Ex7.hs  Ex8.hs  FunctorExample.hs  Main.hs
Lista6/: CHANGELOG.md  Lista6.cabal  README.md  tags
Lista6/src/: Ex1.hs  Ex10.hs  Ex11.hs  Ex12.hs  Ex13.hs  Ex2.hs  Ex3.hs  Ex4.hs  Ex5.hs  Ex6.hs  Ex7.hs  Ex8.hs  Ex9.hs  Main.hs
lista_2/: ex1.hs  ex10.hs  ex11.hs  ex12.hs  ex13.hs  ex14.hs  ex15.hs  ex2.hs  ex3.hs  ex4.hs  ex5.txt  ex6.hs  ex7.hs  ex8.hs  ex9.hs
lista_3/: ex1.hs  ex2.hs  ex3.hs  ex4.hs  ex5.hs  ex6.hs  ex7.hs  ex8.hs
