cabal-version:       2.2

name:                Lista5
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Lista5#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2024 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable Lista5
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  other-modules:       Ex1,
                       Ex2_3,
                       -- Ex4,
                       -- Ex5,
                       Ex6_9,
                       Ex7,
                       Ex8,
                       Ex10,
                       Ex11,
                       Ex12,
                       Ex13,
                       Ex14,
                       Ex15
                       FunctorExample
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
