cabal-version:       2.2

name:                Lista6
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Lista6#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2024 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable Lista6
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Ex1,
                       Ex2,
                       Ex3,
                       Ex4,
                       Ex5,
                       Ex6,
                       Ex7,
                       Ex8,
                       Ex9,
                       Ex10,
                       Ex11,
                       Ex12,
                       Ex13
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
